--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -177,10 +177,17 @@ a {
   margin-top: 70px;
 }
 
-/* .clients .img a:hover {
-  padding: 32px 41px 22px;
-  background: red;
-} */
+.clients .img a {
+  display: flex;
+  align-items: center;
+  padding: 0 42px;
+  height: 90px;
+  border-radius: 12px;
+}
+
+.clients .img a:hover {
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+}
 
 /* ========== Guides ========== */
 .guides {
