--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,17 +52,29 @@ a {
   overflow: hidden;
 }
 
+:root {
+  --nav-padding: 12px;
+}
+
 /* ========== Header ========== */
-.header {
+.fixed-header {
+  background: #e6f0ff;
+  padding-top: 26px;
+  position: sticky;
+  top: -26px;
+  z-index: 1;
+}
+
+.hero-wrap {
   position: relative;
   background: #e6f0ff;
-  height: 100vh;
+  height: calc(100vh - 90px); /*100% - chiều cao của header*/
 }
 
 .navbar {
   display: flex;
   align-items: center;
-  padding-top: 38px;
+  padding: var(--nav-padding) 0;
 }
 
 .navbar ul {
@@ -102,10 +114,13 @@ a {
   font-size: 1.4rem;
 }
 
+.hero {
+  padding-top: calc(130px - var(--nav-padding));
+}
+
 .hero .info {
   width: 51%;
   height: 34%;
-  margin-top: 130px;
 }
 
 .hero .sub-title {
